Avoid flickering the menu

--- a/static/css/theme-mine.css
+++ b/static/css/theme-mine.css
@@ -1141,3 +1141,7 @@ table tr th {
     margin-left: 5px;
     margin-right: 5px;
 }
+
+.sidemenu.hidden {
+    display: none;
+}
